package ru.n4d9.json;

public class JSONParseException extends Exception {
    public JSONParseException(String message) {
        super(message);
    }
}