@startuml

title __PROG6's Class Diagram__\n

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.server {
        class Building {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.server {
        class BuildingChecker {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.client {
        class Client {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.client {
        class ClientSettings {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.server {
        class FileLoader {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONArray {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONBoolean {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONEntity {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONNumber {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONObject {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONParseException {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONParser {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        class JSONString {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.json {
        enum JSONType {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      class Message {
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.transmitter {
        class Receiver {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.transmitter {
        interface ReceiverListener {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.server {
        class RequestHandler {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.client {
        class Room {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.client {
        class RoomFactory {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.transmitter {
        class Sender {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.transmitter {
        interface SenderListener {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.server {
        class Server {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.Utils {
        class StringEntity {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.client {
        class UserCommandProcessor {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      package ifmo.programming.lab6.client {
        class UserCommandReader {
        }
      }
    }
  }
  

  package  {
    package ifmo.programming.lab6 {
      class Utilities {
      }
    }
  }
  

  JSONArray -up-|> JSONEntity
  JSONBoolean -up-|> JSONEntity
  JSONEntity o-- JSONType : type
  JSONNumber -up-|> JSONEntity
  JSONObject -up-|> JSONEntity
  JSONString -up-|> JSONEntity
  Message -up-|> Serializable
  Receiver o-- ReceiverListener : listener
  RequestHandler o-- Receiver : receiver
  Room -up-|> Comparable
  Room -up-|> Serializable
  StringEntity -up-|> Serializable
  UserCommandProcessor o-- Receiver : receiver
  UserCommandReader o-- UserCommandProcessor : processor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
